tests/valid/test_record_10.wyal
type Buffer is ({int[] data, int wp} self)

assert:
  forall(Buffer x, Buffer y, int[] ys):
     if:
         x == y{data:=ys}
     then:
         x.data == ys

