tests/invalid/test_042.wyal
type Buffer is ({int[] data, int wp} this)

assert:
  forall(Buffer x, Buffer y, bool[] ys):
     if:
         x == y{data:=ys}
         y.wp >= 0
     then:
         x.wp >= 0

